Borders and icons fix for Windows' high contrast mode (#619)

--- a/assets/base.css
+++ b/assets/base.css
@@ -1160,7 +1160,7 @@ deferred-media {
   font: inherit;
   padding: 0.9rem 3rem 1.1rem;
   text-decoration: none;
-  border: 0;
+  border: 0.1rem solid transparent;
   border-radius: 0;
   background-color: rgba(var(--color-button), var(--alpha-button-background));
   box-shadow: 0 0 0 0.1rem rgba(var(--color-button), var(--alpha-button-border));
@@ -1242,6 +1242,12 @@ deferred-media {
 .button.loading {
   color: transparent;
   position: relative;
+}
+
+@media screen and (forced-colors: active) {
+  .button.loading {
+    color: rgb(var(--color-foreground));
+  }
 }
 
 .button.loading > .loading-overlay__spinner {
@@ -1368,7 +1374,7 @@ details[open] > .share-button__fallback {
   -webkit-appearance: none;
   appearance: none;
   background-color: transparent;
-  border: 0;
+  border: 0.1rem solid transparent;
   border-radius: 0;
   color: rgb(var(--color-foreground));
   font-size: 1.6rem;
@@ -2281,4 +2287,15 @@ details-disclosure > details {
   background: var(--color-background);
   background: var(--gradient-background);
   background-attachment: fixed;
+}
+
+@media screen and (forced-colors: active) {
+  .icon {
+    color: CanvasText;
+    fill: CanvasText !important;
+  }
+
+  .icon-close-small path {
+    stroke: CanvasText;
+  }
 }
